// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAccountAndTeamsRelationship should build team and account relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "sysdig_account:10006755",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessKey": "91584491-9f78-4757-ae1a-110a0a8f0068",
            "additionalRoles": Array [],
            "agentInstallParams": Object {
              "accessKey": "91584491-9f78-4757-ae1a-110a0a8f0068",
              "checkCertificate": true,
              "collectorAddress": "ingest-us2.app.sysdig.com",
              "collectorPort": 6443,
              "sslEnabled": true,
            },
            "currentTeam": 10006021,
            "customer": Object {
              "accessKey": "91584491-9f78-4757-ae1a-110a0a8f0068",
              "dateCreated": 1636399070379,
              "externalId": "f088f23a-a591-4e5f-89ca-e1ad254ab713",
              "id": 1002849,
              "name": null,
            },
            "customerSettings": Object {
              "environment": Object {},
              "plan": Object {
                "allocatedAgentsCount": 15,
                "indirectCustomer": false,
                "maxAgents": 15,
                "maxTeams": -1,
                "metricsSettings": Object {
                  "enableGlobalK8sAllPodContainers": false,
                  "enablePromCalculatedIngestion": false,
                  "enablePromScrapeV2": true,
                  "enforce": false,
                  "enforceAgentAggregation": true,
                  "limits": Object {
                    "appCheck": 500,
                    "appCheckAggregationCount": 12,
                    "connections": 80,
                    "containerDensity": 200,
                    "containerServerPorts": 5,
                    "hostServerPorts": 10,
                    "jmx": 500,
                    "kubernetesJobs": 10000,
                    "kubernetesPods": 10000,
                    "limitKubernetesResources": false,
                    "meerkatSuited": true,
                    "progAggregationCount": 12,
                    "promMetricsWeight": 0,
                    "prometheus": 8000,
                    "prometheusPerProcess": 500,
                    "statsd": 1000,
                    "topDevicesCount": 10,
                    "topFilesCount": 10,
                  },
                  "showExperimentals": false,
                },
                "migratedToV2Direct": false,
                "monitorEnabled": false,
                "onDemandAgents": 0,
                "overageAssessmentEligible": false,
                "partner": "None",
                "paymentsIntegrationId": Object {
                  "id": "49659676",
                  "ttl": Object {
                    "ttl": 50,
                  },
                },
                "pricingPlan": "pro",
                "secureEnabled": true,
                "subscriptionState": "trialing",
                "subscriptionVersion": 2,
                "timelines": Array [
                  Object {
                    "from": null,
                    "sampling": 10000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 60000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 3600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 86400000000,
                    "to": null,
                  },
                ],
                "trialEndDate": 1638991071460,
                "trialPlanName": "secure-enterprise-standard-monthly",
              },
              "sysdig": Object {
                "buckets": Array [],
                "enabled": false,
                "enabledSSE": false,
              },
            },
            "dateActivated": 1636466484035,
            "dateCreated": 1636399220686,
            "enabled": true,
            "firstName": "Stefan",
            "id": 10006755,
            "intercomUserIdHash": "6ffd280509637cc4221ceeb32aad9847065ec4f2b4a40aa27f194c51a2b32e86",
            "lastName": "Virag",
            "lastSeenOnSecure": 1638189825281,
            "lastUpdated": 1638189825281,
            "name": "viragsf@gmail.com",
            "oauth": false,
            "pictureUrl": "http://www.gravatar.com/avatar/edd1469180957cee25d7753ef4a84a13",
            "products": Array [
              "SDC",
              "SDS",
            ],
            "properties": Object {
              "has_been_invited": true,
            },
            "remoteWriteParams": Object {
              "serverAddress": "us2.app.sysdig.com",
            },
            "resetPassword": false,
            "status": "confirmed",
            "systemRole": "ROLE_CUSTOMER",
            "teamRoles": Array [
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 10006020,
                "teamName": "Monitor Operations",
                "teamTheme": "#7BB0B2",
                "userId": 10006755,
                "userName": "viragsf@gmail.com",
              },
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 10006021,
                "teamName": "Secure Operations",
                "teamTheme": "#7BB0B2",
                "userId": 10006755,
                "userName": "viragsf@gmail.com",
              },
            ],
            "termsAndConditions": true,
            "timezone": "+00:00",
            "uniqueIntercomUserId": "10006755.f088f23a-a591-4e5f-89ca-e1ad254ab713",
            "username": "viragsf@gmail.com",
            "version": 2,
          },
        },
      ],
      "_type": "sysdig_account",
      "active": undefined,
      "createdOn": undefined,
      "displayName": "Stefan Virag",
      "id": "10006755",
      "name": "viragsf@gmail.com",
      "status": "confirmed",
      "username": "viragsf@gmail.com",
    },
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006021",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070709,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Secure team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006021,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Secure Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDS",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070709,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Secure team with full visibility",
      "displayName": "Secure Operations",
      "entryPointModule": "Explore",
      "id": "10006021",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Secure Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDS",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006020",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070618,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Monitor team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006020,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Monitor Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDC",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070618,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Monitor team with full visibility",
      "displayName": "Monitor Operations",
      "entryPointModule": "Explore",
      "id": "10006020",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Monitor Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDC",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_account:10006755",
      "_key": "sysdig_account:10006755|has|sysdig_team:10006021",
      "_toEntityKey": "sysdig_team:10006021",
      "_type": "sysdig_account_has_team",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_account:10006755",
      "_key": "sysdig_account:10006755|has|sysdig_team:10006020",
      "_toEntityKey": "sysdig_team:10006020",
      "_type": "sysdig_account_has_team",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "sysdig_account",
    "sysdig_team",
    "sysdig_account_has_team",
  ],
  "numCollectedEntities": 3,
}
`;

exports[`#buildTeamAndUsersRelationship should build team and users relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "sysdig_user:10006755",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "dateCreated": 1636399220686,
            "enabled": true,
            "firstName": "Stefan",
            "id": 10006755,
            "lastName": "Virag",
            "lastSeenOnSecure": 1638189825281,
            "products": Array [
              "SDC",
              "SDS",
            ],
            "status": "confirmed",
            "systemRole": "ROLE_CUSTOMER",
            "username": "viragsf@gmail.com",
            "version": 2,
          },
        },
      ],
      "_type": "sysdig_user",
      "active": undefined,
      "createdOn": undefined,
      "dateCreated": 1636399220686,
      "displayName": "Stefan Virag",
      "enabled": true,
      "firstName": "Stefan",
      "id": "10006755",
      "lastName": "Virag",
      "lastSeenOnSecure": 1638189825281,
      "name": "viragsf@gmail.com",
      "products": Array [
        "SDC",
        "SDS",
      ],
      "status": "confirmed",
      "systemRole": "ROLE_CUSTOMER",
      "username": "viragsf@gmail.com",
      "version": 2,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "sysdig_user:10006754",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "dateCreated": 1636399070571,
            "enabled": true,
            "firstName": "Austin",
            "id": 10006754,
            "lastName": "Kelleher",
            "lastSeenOnSecure": 1637720323539,
            "products": Array [
              "SDC",
              "SDS",
            ],
            "status": "confirmed",
            "systemRole": "ROLE_CUSTOMER",
            "username": "austin.kelleher@jupiterone.dev",
            "version": 2,
          },
        },
      ],
      "_type": "sysdig_user",
      "active": undefined,
      "createdOn": undefined,
      "dateCreated": 1636399070571,
      "displayName": "Austin Kelleher",
      "enabled": true,
      "firstName": "Austin",
      "id": "10006754",
      "lastName": "Kelleher",
      "lastSeenOnSecure": 1637720323539,
      "name": "austin.kelleher@jupiterone.dev",
      "products": Array [
        "SDC",
        "SDS",
      ],
      "status": "confirmed",
      "systemRole": "ROLE_CUSTOMER",
      "username": "austin.kelleher@jupiterone.dev",
      "version": 2,
    },
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006021",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070709,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Secure team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006021,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Secure Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDS",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070709,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Secure team with full visibility",
      "displayName": "Secure Operations",
      "entryPointModule": "Explore",
      "id": "10006021",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Secure Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDS",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006020",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070618,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Monitor team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006020,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Monitor Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDC",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070618,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Monitor team with full visibility",
      "displayName": "Monitor Operations",
      "entryPointModule": "Explore",
      "id": "10006020",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Monitor Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDC",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_team:10006020",
      "_key": "sysdig_team:10006020|has|sysdig_user:10006755",
      "_toEntityKey": "sysdig_user:10006755",
      "_type": "sysdig_team_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_team:10006021",
      "_key": "sysdig_team:10006021|has|sysdig_user:10006755",
      "_toEntityKey": "sysdig_user:10006755",
      "_type": "sysdig_team_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_team:10006020",
      "_key": "sysdig_team:10006020|has|sysdig_user:10006754",
      "_toEntityKey": "sysdig_user:10006754",
      "_type": "sysdig_team_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_team:10006021",
      "_key": "sysdig_team:10006021|has|sysdig_user:10006754",
      "_toEntityKey": "sysdig_user:10006754",
      "_type": "sysdig_team_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "sysdig_user",
    "sysdig_team",
    "sysdig_team_has_user",
  ],
  "numCollectedEntities": 4,
}
`;

exports[`#fetchTeams should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006021",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070709,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Secure team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006021,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Secure Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDS",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070709,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Secure team with full visibility",
      "displayName": "Secure Operations",
      "entryPointModule": "Explore",
      "id": "10006021",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Secure Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDS",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
    Object {
      "_class": Array [
        "Team",
      ],
      "_key": "sysdig_team:10006020",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "canUseAgentCli": true,
            "canUseAwsMetrics": true,
            "canUseBeaconMetrics": true,
            "canUseCustomEvents": true,
            "canUseRapidResponse": false,
            "canUseSysdigCapture": true,
            "customerId": 1002849,
            "dateCreated": 1636399070618,
            "default": true,
            "defaultTeamRole": "ROLE_TEAM_EDIT",
            "description": "Immutable Monitor team with full visibility",
            "entryPoint": Object {
              "module": "Explore",
            },
            "id": 10006020,
            "immutable": true,
            "lastUpdated": 1636399070379,
            "name": "Monitor Operations",
            "namespaceFilters": Object {},
            "origin": "SYSDIG",
            "products": Array [
              "SDC",
            ],
            "properties": Object {},
            "show": "host",
            "theme": "#7BB0B2",
            "userCount": 2,
            "version": 1,
          },
        },
      ],
      "_type": "sysdig_team",
      "canUseAgentCli": true,
      "canUseAwsMetrics": true,
      "canUseBeaconMetrics": true,
      "canUseCustomEvents": true,
      "canUseRapidResponse": false,
      "canUseSysdigCapture": true,
      "createdOn": undefined,
      "customerId": 1002849,
      "dateCreated": 1636399070618,
      "default": true,
      "defaultTeamRole": "ROLE_TEAM_EDIT",
      "description": "Immutable Monitor team with full visibility",
      "displayName": "Monitor Operations",
      "entryPointModule": "Explore",
      "id": "10006020",
      "immutable": true,
      "lastUpdated": 1636399070379,
      "name": "Monitor Operations",
      "origin": "SYSDIG",
      "products": Array [
        "SDC",
      ],
      "show": "host",
      "theme": "#7BB0B2",
      "userCount": 2,
      "version": 1,
    },
  ],
  "encounteredTypes": Array [
    "sysdig_team",
  ],
  "numCollectedEntities": 2,
}
`;
